fixed the goddam pages

--- a/tools-safety/battery-powered-tools-pros-and-cons.html
+++ b/tools-safety/battery-powered-tools-pros-and-cons.html
@@ -57,7 +57,7 @@
   <h1>Battery-Powered Tools Pros and Cons</h1>
 
   <h2>Battery tools change how work time is distributed</h2>
-  <p>Battery-powered tools run until stored energy is gone rather than until the operator stops. The single limiter is usable runtime, and when it is misjudged, work ends mid-task.</p>
+  <p>Battery-powered tools run until stored energy is exhausted rather than until the operator decides to stop. When available runtime is misjudged, work ends abruptly in the middle of a task.</p>
   <p>The lawn shows this as half-finished edges, uneven coverage, and abrupt stopping points.</p>
 
   <h2>Consistent power masks uneven contact</h2>
