--- a/tools-safety/blowers-vs-rakes-for-lawn-cleanup.html
+++ b/tools-safety/blowers-vs-rakes-for-lawn-cleanup.html
@@ -57,7 +57,8 @@
   <h1>Blowers vs Rakes for Lawn Cleanup</h1>
 
   <h2>Cleanup tools differ in how they move force</h2>
-  <p>Blowers push debris using air pressure, while rakes pull material through direct contact. The single limiter is surface stability, and once it is exceeded, grass stops holding its shape.</p>
+  <p>Blowers move debris with air pressure, while rakes rely on direct contact to pull material. When surface stability breaks down, grass can no longer hold its shape.</p>
+
   <p>The lawn shows this immediately as flattened blades or exposed patches after cleanup.</p>
 
   <h2>Blowers spread force across a wide area</h2>
