--- a/tools-safety/broadcast-vs-drop-spreaders-explained.html
+++ b/tools-safety/broadcast-vs-drop-spreaders-explained.html
@@ -57,7 +57,7 @@
   <h1>Broadcast vs Drop Spreaders Explained</h1>
 
   <h2>Both tools are limited by placement accuracy</h2>
-  <p>Broadcast and drop spreaders exist to place material on the surface, but they do it in opposite ways. The single limiter is placement precision, and once it is exceeded, patterns become unavoidable.</p>
+  <p>Broadcast and drop spreaders both place material on the surface, but they do so using opposite delivery methods. When placement precision breaks down, visible patterns become unavoidable.</p>
   <p>The lawn later shows uneven response even when the same amount of material was used.</p>
 
   <h2>Broadcast spreaders trade reach for control</h2>
