--- a/tools-safety/common-lawn-tool-myths.html
+++ b/tools-safety/common-lawn-tool-myths.html
@@ -57,7 +57,7 @@
   <h1>Common Lawn Tool Myths</h1>
 
   <h2>Myths survive because damage shows up late</h2>
-  <p>Many lawn tool beliefs feel correct because results look acceptable at first. The single limiter is delayed feedback, and once it hides consequences, myths take root.</p>
+  <p>Many lawn tool beliefs feel correct because early results look acceptable. When feedback arrives late enough to hide consequences, those beliefs harden into myths.</p>
   <p>You see no immediate problem after using the tool.</p>
 
   <h2>Power is mistaken for control</h2>
