--- a/tools-safety/common-lawn-tool-safety-hazards.html
+++ b/tools-safety/common-lawn-tool-safety-hazards.html
@@ -57,7 +57,7 @@
   <h1>Common Lawn Tool Safety Hazards</h1>
 
   <h2>Most hazards begin with loss of control</h2>
-  <p>Nearly all lawn tool injuries trace back to moments when a tool stops responding the way the user expects. The single limiter is control margin, and once it narrows, small disturbances become dangerous.</p>
+  <p>Nearly all lawn tool injuries trace back to moments when a tool stops responding the way the user expects. As the margin for control narrows, small disturbances stop being correctable and turn dangerous.</p>
   <p>The first signal is a tool that resists, jerks, or drifts instead of moving smoothly.</p>
 
   <h2>Resistance turns effort into instability</h2>
