--- a/tools-safety/difference-between-spike-and-core-aerators.html
+++ b/tools-safety/difference-between-spike-and-core-aerators.html
@@ -57,7 +57,7 @@
   <h1>Difference Between Spike and Core Aerators</h1>
 
   <h2>Both tools target the same surface problem</h2>
-  <p>Spike and core aerators are used when the lawn surface resists normal function. The single limiter is surface compression, and each tool interacts with it differently.</p>
+  <p>Spike and core aerators are used when the lawn surface resists normal function. Surface compression determines their effectiveness, and each tool interacts with that resistance in a different way.</p>
   <p>The ground either rebounds after disturbance or returns to the same hard feel.</p>
 
   <h2>Spike aerators displace soil without removing it</h2>
