--- a/tools-safety/difference-between-trimming-and-edging.html
+++ b/tools-safety/difference-between-trimming-and-edging.html
@@ -57,7 +57,7 @@
   <h1>Difference Between Trimming and Edging</h1>
 
   <h2>Trimming spreads contact, edging concentrates it</h2>
-  <p>Trimming removes excess growth across broader areas, while edging focuses contact into a fixed line. The single limiter is boundary tolerance, and once that limit is exceeded, recovery stops.</p>
+  <p>Trimming removes excess growth across broader areas, while edging concentrates contact along a fixed line. Once that boundary can no longer absorb stress, recovery stops.</p>
   <p>The lawn shows this as healthy interior grass with thinning or recessed borders.</p>
 
   <h2>Trimming leaves diffuse wear patterns</h2>
