--- a/tools-safety/electric-vs-gas-lawn-equipment.html
+++ b/tools-safety/electric-vs-gas-lawn-equipment.html
@@ -57,8 +57,8 @@
   <h1>Electric vs Gas Lawn Equipment</h1>
 
   <h2>The difference shows up in how force is delivered</h2>
-  <p>Electric tools apply force smoothly and consistently, while gas tools deliver stronger bursts with vibration. The single limiter is controllable feedback, and when it is exceeded, the lawn shows uneven cuts, skipped spots, and visible tracking marks.</p>
-  <p>The surface reflects how well the tool’s output could be guided.</p>
+  <p>Electric tools apply force smoothly and consistently, while gas tools deliver stronger bursts with vibration. When feedback can no longer be guided accurately, the lawn shows uneven cuts, skipped spots, and visible tracking marks.</p>
+  <p>The surface reflects how well the tool’s output could be controlled.</p>
 
   <h2>Electric tools reduce noise but hide overload</h2>
   <p>Because electric equipment runs quietly and smoothly, it is easier to push past limits without noticing resistance. The result appears as sudden thinning or scorched-looking patches where work continued too long.</p>
