--- a/tools-safety/how-children-get-hurt-around-lawn-tools.html
+++ b/tools-safety/how-children-get-hurt-around-lawn-tools.html
@@ -57,7 +57,7 @@
   <h1>How Children Get Hurt Around Lawn Tools</h1>
 
   <h2>Injuries start when boundaries stop being obvious</h2>
-  <p>Yard work creates moving hazards that depend on clear separation. The single limiter is boundary clarity, and when it fades, children drift into active zones without realizing it.</p>
+  <p>Yard work creates moving hazards that depend on clear separation. When boundaries are no longer obvious, children drift into active zones without realizing the danger.</p>
   <p>You notice a child stepping closer because nothing looks different from the rest of the yard.</p>
 
   <h2>Noise masks distance and speed</h2>
