--- a/tools-safety/how-cold-affects-tool-safety.html
+++ b/tools-safety/how-cold-affects-tool-safety.html
@@ -57,7 +57,7 @@
   <h1>How Cold Affects Tool Safety</h1>
 
   <h2>Cold removes feedback before strength fades</h2>
-  <p>Low temperatures dull nerve response long before muscles feel weak. The single limiter is tactile feedback, and once it drops, precision disappears without warning.</p>
+  <p>Low temperatures dull nerve response long before muscles feel weak. As tactile feedback fades, precision drops suddenly without clear warning.</p>
   <p>Your hands feel capable but oddly disconnected from the tool.</p>
 
   <h2>Grip pressure becomes uneven</h2>
