--- a/tools-safety/how-edging-affects-lawn-health.html
+++ b/tools-safety/how-edging-affects-lawn-health.html
@@ -57,7 +57,7 @@
   <h1>How Edging Affects Lawn Health</h1>
 
   <h2>Edging concentrates stress into a fixed line</h2>
-  <p>Edging focuses cutting and contact into the same narrow strip every time. The single limiter is boundary recovery, and once that limit is exceeded, grass along the edge stops filling back in.</p>
+  <p>Edging concentrates cutting and contact into the same narrow strip each pass. Once that edge can no longer recover between hits, the grass there stops filling back in.</p>
   <p>The border immediately looks thinner and lower than the rest of the lawn.</p>
 
   <h2>Clean lines come at the cost of tissue loss</h2>
