--- a/tools-safety/how-experience-reduces-tool-damage.html
+++ b/tools-safety/how-experience-reduces-tool-damage.html
@@ -57,7 +57,7 @@
   <h1>How Experience Reduces Tool Damage</h1>
 
   <h2>Damage starts when force outruns awareness</h2>
-  <p>Tools fail fastest when users push through resistance without recognizing it. The single limiter is stress recognition, and experience sharpens it before parts are overwhelmed.</p>
+  <p>Tools fail fastest when resistance is pushed through instead of noticed. Failure accelerates when growing stress goes unrecognized until components are already overloaded.</p>
   <p>You feel resistance change before anything stalls or jerks.</p>
 
   <h2>Experienced users sense load changes early</h2>
