--- a/tools-safety/how-fatigue-leads-to-accidents.html
+++ b/tools-safety/how-fatigue-leads-to-accidents.html
@@ -57,7 +57,7 @@
   <h1>How Fatigue Leads to Accidents</h1>
 
   <h2>Fatigue begins before the body feels weak</h2>
-  <p>Most accidents start when alertness stops resetting even though muscles still move. The single limiter is mental recovery, and once it falls behind, control fades without warning.</p>
+  <p>Most accidents begin when awareness stops refreshing even though the body keeps moving. When mental recovery lags, control erodes quietly before anything feels wrong.</p>
   <p>You notice yourself rereading the same area of grass or path without realizing it.</p>
 
   <h2>Reaction time stretches without notice</h2>
