--- a/tools-safety/how-hearing-damage-happens-in-yard-work.html
+++ b/tools-safety/how-hearing-damage-happens-in-yard-work.html
@@ -57,7 +57,7 @@
   <h1>How Hearing Damage Happens in Yard Work</h1>
 
   <h2>Hearing damage starts before silence feels loud</h2>
-  <p>Yard equipment produces sustained noise that overwhelms the ear’s natural protection. The single limiter is auditory recovery, and once sound exposure exceeds it, damage accumulates without immediate pain.</p>
+  <p>Yard equipment produces sustained noise that overwhelms the ear’s natural protection. When exposure outpaces the ear’s ability to recover, damage builds quietly without immediate pain.</p>
   <p>The first sign is a dulling of background noise that lingers after work stops.</p>
 
   <h2>Continuous noise removes contrast</h2>
