--- a/tools-safety/how-lawn-aerators-actually-work.html
+++ b/tools-safety/how-lawn-aerators-actually-work.html
@@ -57,7 +57,7 @@
   <h1>How Lawn Aerators Actually Work</h1>
 
   <h2>Aeration works by breaking surface sealing</h2>
-  <p>A lawn aerator creates temporary openings in compacted ground so roots can function again. The single limiter is gas exchange, and once it is restored briefly, grass regains basic stability.</p>
+  <p>A lawn aerator creates temporary openings in compacted ground so roots can function again. When air movement briefly returns to the soil, grass regains basic stability.</p>
   <p>The lawn shows this as slightly raised plugs and a surface that feels softer underfoot.</p>
 
   <h2>The openings must stay open long enough to matter</h2>
