--- a/tools-safety/how-lawn-injuries-actually-happen.html
+++ b/tools-safety/how-lawn-injuries-actually-happen.html
@@ -57,7 +57,7 @@
   <h1>How Lawn Injuries Actually Happen</h1>
 
   <h2>Injuries begin when control vanishes</h2>
-  <p>Lawn injuries do not start with danger; they start with a loss of control. The single limiter is reaction margin, and once it collapses, the body cannot adjust in time.</p>
+  <p>Lawn injuries do not start with danger; they start with a loss of control. When reaction time shrinks too far, the body can no longer adjust in time.</p>
   <p>The moment before injury feels like a sudden slip, jerk, or unexpected pull.</p>
 
   <h2>Unexpected movement breaks timing</h2>
