--- a/tools-safety/how-leaf-buildup-affects-grass.html
+++ b/tools-safety/how-leaf-buildup-affects-grass.html
@@ -57,7 +57,7 @@
   <h1>How Leaf Buildup Affects Grass</h1>
 
   <h2>Leaves interrupt contact between grass and air</h2>
-  <p>When leaves settle into turf, they form a layer that separates grass from its surroundings. The single limiter is surface exchange, and once that exchange is blocked, grass loses its ability to function normally.</p>
+  <p>When leaves settle into turf, they form a layer that separates grass from its surroundings. The controlling constraint is surface exchange, and once that exchange is blocked, grass loses its ability to function normally.</p>
   <p>The lawn takes on a dull, muted color even while nearby areas stay bright.</p>
 
   <h2>Weight presses blades flat against the soil</h2>
