--- a/tools-safety/how-long-lawn-tools-typically-last.html
+++ b/tools-safety/how-long-lawn-tools-typically-last.html
@@ -57,7 +57,7 @@
   <h1>How Long Lawn Tools Typically Last</h1>
 
   <h2>Lifespan ends when control degrades</h2>
-  <p>Lawn tools fail in function before they fail mechanically. The single limiter is tolerance integrity, and once it erodes, consistency disappears.</p>
+  <p>Lawn tools fail in function before they fail mechanically. The governing threshold is tolerance integrity, and once it erodes, consistency disappears.</p>
   <p>You feel the tool drift instead of tracking straight.</p>
 
   <h2>Wear accumulates through normal use</h2>
