--- a/tools-safety/how-often-lawn-tools-should-be-used.html
+++ b/tools-safety/how-often-lawn-tools-should-be-used.html
@@ -57,7 +57,7 @@
   <h1>How Often Lawn Tools Should Be Used</h1>
 
   <h2>Frequency matters more than intensity</h2>
-  <p>Each time a tool touches the lawn, it leaves a mark that has to settle before the surface looks normal again. The single limiter is controllable contact time, and when that limit is crossed, the yard shows scuffed paths, flattened grass that never stands back up, and edges that look chewed instead of clean.</p>
+  <p>Each time a tool touches the lawn, it leaves a mark that has to settle before the surface looks normal again. The primary bottleneck is controllable contact time, and when that limit is crossed, the yard shows scuffed paths, flattened grass that never stands back up, and edges that look chewed instead of clean.</p>
   <p>The damage accumulates even when each session feels light.</p>
 
   <h2>Repeated use removes visual recovery cues</h2>
