--- a/tools-safety/how-poor-visibility-causes-accidents.html
+++ b/tools-safety/how-poor-visibility-causes-accidents.html
@@ -57,7 +57,7 @@
   <h1>How Poor Visibility Causes Accidents</h1>
 
   <h2>Accidents start when visual feedback drops first</h2>
-  <p>Work becomes unsafe when the eyes stop confirming position and distance. The single limiter is visual confirmation, and once it weakens, motion continues without reliable reference.</p>
+  <p>Work becomes unsafe when the eyes stop confirming position and distance. The critical dependency is visual confirmation, and once it weakens, motion continues without reliable reference.</p>
   <p>You feel unsure where the tool edge actually is.</p>
 
   <h2>Shadows distort depth and speed</h2>
