--- a/tools-safety/how-proper-gear-improves-efficiency.html
+++ b/tools-safety/how-proper-gear-improves-efficiency.html
@@ -57,7 +57,7 @@
   <h1>How Proper Gear Improves Efficiency</h1>
 
   <h2>Efficiency rises when effort stays aligned</h2>
-  <p>Work moves faster when energy goes directly into the task instead of constant correction. The single limiter is force alignment, and proper gear preserves it from start to finish.</p>
+  <p>Work moves faster when energy goes directly into the task instead of constant correction. The defining constraint is force alignment, and proper gear preserves it from start to finish.</p>
   <p>You feel steady progress without frequent adjustments.</p>
 
   <h2>Stable contact reduces repeat passes</h2>
