--- a/tools-safety/how-repetitive-motion-damages-joints.html
+++ b/tools-safety/how-repetitive-motion-damages-joints.html
@@ -57,7 +57,7 @@
   <h1>How Repetitive Motion Damages Joints</h1>
 
   <h2>Damage starts when movement never fully resets</h2>
-  <p>Joint wear begins long before sharp pain shows up. The single limiter is tissue recovery capacity, and once identical motions outpace it, stress stacks silently.</p>
+  <p>Joint wear begins long before sharp pain shows up. The rate-limiting capacity is tissue recovery capacity, and once identical motions outpace it, stress stacks silently.</p>
   <p>You feel mild stiffness that fades slower each time you stop.</p>
 
   <h2>Identical angles concentrate pressure</h2>
