--- a/tools-safety/how-runtime-limits-affect-yard-work.html
+++ b/tools-safety/how-runtime-limits-affect-yard-work.html
@@ -57,7 +57,7 @@
   <h1>How Runtime Limits Affect Yard Work</h1>
 
   <h2>Work quality depends on uninterrupted completion</h2>
-  <p>Yard work assumes a task can be finished in one continuous window. The single limiter is continuous operating window, and once that window closes mid-task, the finish breaks down.</p>
+  <p>Yard work assumes a task can be finished in one continuous window. The limiting condition is continuous operating window, and once that window closes mid-task, the finish breaks down.</p>
   <p>The lawn shows this as sharp transitions between completed and unfinished areas.</p>
 
   <h2>Stopping mid-pass leaves permanent seams</h2>
