--- a/tools-safety/how-small-injuries-turn-serious.html
+++ b/tools-safety/how-small-injuries-turn-serious.html
@@ -57,7 +57,7 @@
   <h1>How Small Injuries Turn Serious</h1>
 
   <h2>Escalation starts when recovery never completes</h2>
-  <p>Minor injuries become dangerous when the body is stressed again before it settles. The single limiter is tissue recovery, and once it is bypassed, damage stacks instead of clearing.</p>
+  <p>Minor injuries become dangerous when the body is stressed again before it settles. The governing recovery point is tissue recovery, and once it is bypassed, damage stacks instead of clearing.</p>
   <p>You feel soreness that never fully fades between sessions.</p>
 
   <h2>Repeated motion reopens the same damage</h2>
