--- a/tools-safety/how-spreaders-actually-distribute-material.html
+++ b/tools-safety/how-spreaders-actually-distribute-material.html
@@ -57,7 +57,7 @@
   <h1>How Spreaders Actually Distribute Material</h1>
 
   <h2>Spreaders release material in arcs, not blankets</h2>
-  <p>Every spreader throws material outward in a pattern that weakens with distance. The single limiter is overlap accuracy, and when that limit is missed, coverage becomes uneven.</p>
+  <p>Every spreader throws material outward in a pattern that thins with distance. When overlap is misjudged, coverage becomes uneven.</p>
   <p>The lawn shows this as visible bands that respond differently after application.</p>
 
   <h2>Center paths receive more material than edges</h2>
