--- a/tools-safety/how-storage-affects-lawn-tools.html
+++ b/tools-safety/how-storage-affects-lawn-tools.html
@@ -57,7 +57,7 @@
   <h1>How Storage Affects Lawn Tools</h1>
 
   <h2>Storage determines whether parts stay aligned</h2>
-  <p>When tools sit under uneven load, components slowly shift out of position. The single limiter is alignment stability, and once it drifts, smooth operation disappears.</p>
+  <p>When tools sit under uneven load, components slowly shift out of position. The stability boundary is alignment stability, and once it drifts, smooth operation disappears.</p>
   <p>The first sign is a tool that no longer feels straight or balanced when lifted.</p>
 
   <h2>Pressure during storage creates permanent stress</h2>
