--- a/tools-safety/how-to-reduce-injury-risk-while-working.html
+++ b/tools-safety/how-to-reduce-injury-risk-while-working.html
@@ -57,7 +57,7 @@
   <h1>How to Reduce Injury Risk While Working</h1>
 
   <h2>Injury risk rises when control limits are crossed</h2>
-  <p>Most injuries happen after work quietly exceeds what the body can manage. The single limiter is controllable effort, and once it is passed, correction comes too late.</p>
+  <p>Most injuries happen after work quietly exceeds what the body can manage. Once effort pushes past what can be controlled, correction arrives too late.</p>
   <p>You feel movements becoming forced instead of guided.</p>
 
   <h2>Awareness fails before strength does</h2>
