--- a/tools-safety/how-tool-balance-affects-control.html
+++ b/tools-safety/how-tool-balance-affects-control.html
@@ -57,7 +57,7 @@
   <h1>How Tool Balance Affects Control</h1>
 
   <h2>Balance decides whether motion stays centered</h2>
-  <p>Every tool has a center of mass that either aligns with the user or pulls away. The single limiter is centered control, and when balance is off, force drifts instead of staying where it’s aimed.</p>
+  <p>Every tool has a center of mass that either aligns with the user or pulls away. The decisive control factor is centered control, and when balance is off, force drifts instead of staying where it’s aimed.</p>
   <p>The lawn shows this as curved passes and uneven contact that appear even during slow movement.</p>
 
   <h2>Imbalanced tools amplify small hand movements</h2>
