--- a/tools-safety/how-tool-failure-delays-lawn-recovery.html
+++ b/tools-safety/how-tool-failure-delays-lawn-recovery.html
@@ -57,7 +57,7 @@
   <h1>How Tool Failure Delays Lawn Recovery</h1>
 
   <h2>Recovery slows the moment clean contact is lost</h2>
-  <p>Lawn recovery depends on uniform, predictable contact. The single limiter is contact consistency, and once tools fail to deliver it, stress accumulates instead of healing.</p>
+  <p>Lawn recovery depends on uniform, predictable contact. The governing consistency factor is contact consistency, and once tools fail to deliver it, stress accumulates instead of healing.</p>
   <p>You see irregular damage patterns instead of even regrowth.</p>
 
   <h2>Failure creates uneven stress zones</h2>
