--- a/tools-safety/how-tool-guards-actually-protect-users.html
+++ b/tools-safety/how-tool-guards-actually-protect-users.html
@@ -57,7 +57,7 @@
   <h1>How Tool Guards Actually Protect Users</h1>
 
   <h2>Guards matter when control disappears</h2>
-  <p>Tool guards are not about normal operation. The single limiter is reaction time, and when it fails, guards become the first physical barrier between force and the body.</p>
+  <p>Tool guards are not about normal operation. The decisive constraint is reaction time, and when it fails, guards become the first physical barrier between force and the body.</p>
   <p>You hear or feel the guard make contact instead of your hand.</p>
 
   <h2>Unexpected contact happens faster than correction</h2>
