--- a/tools-safety/how-tool-kickback-happens.html
+++ b/tools-safety/how-tool-kickback-happens.html
@@ -57,7 +57,7 @@
   <h1>How Tool Kickback Happens</h1>
 
   <h2>Kickback begins when resistance arrives early</h2>
-  <p>Tools are designed to move freely through expected material. The single limiter is resistance timing, and when it appears faster than the body can adapt, force reverses direction.</p>
+  <p>Tools are designed to move freely through expected material. The critical timing boundary is resistance timing, and when it appears faster than the body can adapt, force reverses direction.</p>
   <p>You feel a sudden jolt instead of steady pull.</p>
 
   <h2>Momentum keeps moving after control is lost</h2>
