--- a/tools-safety/how-tool-maintenance-extends-life.html
+++ b/tools-safety/how-tool-maintenance-extends-life.html
@@ -57,7 +57,7 @@
   <h1>How Tool Maintenance Extends Life</h1>
 
   <h2>Tools fail from accumulated wear, not sudden events</h2>
-  <p>Every moving tool slowly wears itself down through friction, vibration, and impact. The single limiter is wear accumulation, and once it accelerates, performance drops across the entire tool.</p>
+  <p>Every moving tool slowly wears itself down through friction, vibration, and impact. The governing accumulation point is wear accumulation, and once it accelerates, performance drops across the entire tool.</p>
   <p>The operator notices rougher movement and louder operation before any obvious break.</p>
 
   <h2>Neglect concentrates wear in specific components</h2>
