--- a/tools-safety/how-tool-misuse-damages-lawns.html
+++ b/tools-safety/how-tool-misuse-damages-lawns.html
@@ -57,7 +57,7 @@
   <h1>How Tool Misuse Damages Lawns</h1>
 
   <h2>Misuse starts when contact stops being controlled</h2>
-  <p>Tools are supposed to apply force in a predictable way. The single limiter is controllable contact, and misuse begins when the tool is pushed in a way that makes contact erratic instead of clean.</p>
+  <p>Tools are supposed to apply force in a predictable way. The defining control boundary is controllable contact, and misuse begins when the tool is pushed in a way that makes contact erratic instead of clean.</p>
   <p>The proof is visible right away as chatter marks, torn edges, and strips that look scraped rather than evenly worked.</p>
 
   <h2>Extra passes turn small errors into permanent patterns</h2>
