--- a/tools-safety/how-tool-noise-affects-awareness.html
+++ b/tools-safety/how-tool-noise-affects-awareness.html
@@ -57,7 +57,7 @@
   <h1>How Tool Noise Affects Awareness</h1>
 
   <h2>Awareness drops when sound overwhelms cues</h2>
-  <p>Continuous machine noise removes subtle signals that confirm position and timing. The single limiter is auditory masking, and once it dominates, movement continues without reliable reference.</p>
+  <p>Continuous machine noise removes subtle signals that confirm position and timing. The dominant sensory barrier is auditory masking, and once it dominates, movement continues without reliable reference.</p>
   <p>You notice the world feel flatter and harder to place.</p>
 
   <h2>Direction becomes harder to judge</h2>
