--- a/tools-safety/how-tool-quality-affects-lawn-results.html
+++ b/tools-safety/how-tool-quality-affects-lawn-results.html
@@ -58,7 +58,8 @@
 
   <h2>Quality determines how much control survives contact</h2>
   <p>Every tool transfers force into the lawn. The difference between good and poor quality is whether that force stays predictable.</p>
-  <p>The single limiter is control margin, and once it shrinks, outcomes stop matching effort.</p>
+  <p>The operative boundary is control margin, and once it shrinks, outcomes stop matching effort.</p>
+
 
   <h2>Poor quality turns normal motion into uneven contact</h2>
   <p>Loose parts, flexing frames, and rough edges cause the tool to behave differently from moment to moment. That inconsistency makes it impossible to keep impact confined.</p>
