--- a/tools-safety/how-tool-quality-impacts-safety.html
+++ b/tools-safety/how-tool-quality-impacts-safety.html
@@ -57,7 +57,7 @@
   <h1>How Tool Quality Impacts Safety</h1>
 
   <h2>Safety depends on predictable behavior</h2>
-  <p>Tools become dangerous when they stop responding the same way every time. The single limiter is response consistency, and once it breaks, timing and control collapse.</p>
+  <p>Tools become dangerous when they stop responding the same way every time. The reliability threshold is response consistency, and once it breaks, timing and control collapse.</p>
   <p>You feel unsure how the tool will react on each pass.</p>
 
   <h2>Lower quality removes clear feedback</h2>
