--- a/tools-safety/how-tool-wear-affects-results.html
+++ b/tools-safety/how-tool-wear-affects-results.html
@@ -57,7 +57,7 @@
   <h1>How Tool Wear Affects Results</h1>
 
   <h2>Results slip before failure becomes obvious</h2>
-  <p>Most tools lose accuracy long before they stop working. The single limiter is precision retention, and once it fades, effort fills the gap.</p>
+  <p>Most tools lose accuracy long before they stop working. The governing accuracy ceiling is precision retention, and once it fades, effort fills the gap.</p>
   <p>You see acceptable motion but disappointing outcomes.</p>
 
   <h2>Worn edges replace clean action with drag</h2>
