--- a/tools-safety/how-trimmers-cause-eye-injuries.html
+++ b/tools-safety/how-trimmers-cause-eye-injuries.html
@@ -57,7 +57,7 @@
   <h1>How Trimmers Cause Eye Injuries</h1>
 
   <h2>Eye injuries begin with unseen acceleration</h2>
-  <p>Trimmers cut by whipping material at extreme speed. The single limiter is visual reaction, and once debris moves faster than the eyes can register, injury becomes unavoidable.</p>
+  <p>Trimmers cut by whipping material at extreme speed. The perceptual lag point is visual reaction, and once debris moves faster than the eyes can register, injury becomes unavoidable.</p>
   <p>The first sensation is often a sudden impact with no time to blink or turn away.</p>
 
   <h2>Debris exits outside the visible cutting zone</h2>
