--- a/tools-safety/how-weather-damages-yard-tools.html
+++ b/tools-safety/how-weather-damages-yard-tools.html
@@ -57,7 +57,7 @@
   <h1>How Weather Damages Yard Tools</h1>
 
   <h2>Weather breaks tools while they sit still</h2>
-  <p>Exposure to sun, moisture, and temperature swings slowly alters materials even when tools are not in use. The single limiter is material stability, and once it degrades, parts no longer behave predictably.</p>
+  <p>Exposure to sun, moisture, and temperature swings slowly alters materials even when tools are not in use. As stability erodes, parts stop behaving in predictable ways.</p>
   <p>The first sign is a tool that feels different the moment it is picked up.</p>
 
   <h2>Moisture changes how parts move</h2>
