--- a/tools-safety/how-wet-conditions-increase-injury-risk.html
+++ b/tools-safety/how-wet-conditions-increase-injury-risk.html
@@ -57,7 +57,7 @@
   <h1>How Wet Conditions Increase Injury Risk</h1>
 
   <h2>Wetness removes reliable traction first</h2>
-  <p>Moisture changes how surfaces behave before it changes how they look. The single limiter is friction loss, and once it drops, balance depends on timing instead of grip.</p>
+  <p>Moisture changes how surfaces behave before it changes how they look. The slip threshold is friction loss, and once it drops, balance depends on timing instead of grip.</p>
   <p>You feel your feet hesitate or slide slightly even on familiar ground.</p>
 
   <h2>Hands lose feedback under moisture</h2>
