--- a/tools-safety/how-yard-accidents-can-be-prevented.html
+++ b/tools-safety/how-yard-accidents-can-be-prevented.html
@@ -57,7 +57,7 @@
   <h1>How Yard Accidents Can Be Prevented</h1>
 
   <h2>Accidents form before the moment of impact</h2>
-  <p>Most yard accidents are decided before anything goes wrong. The single limiter is controllable awareness, and once it erodes, events move faster than reaction.</p>
+  <p>Most yard accidents are decided before anything goes wrong. The situational boundary is controllable awareness, and once it erodes, events move faster than reaction.</p>
   <p>You feel slightly rushed or distracted before anything happens.</p>
 
   <h2>Loss of control shows up early</h2>
