--- a/tools-safety/mistakes-that-increase-injury-risk.html
+++ b/tools-safety/mistakes-that-increase-injury-risk.html
@@ -57,7 +57,7 @@
   <h1>Mistakes That Increase Injury Risk</h1>
 
   <h2>Risk rises when correction time disappears</h2>
-  <p>Most injuries begin when small mistakes happen faster than the body can correct them. The single limiter is reaction margin, and once it narrows, events outrun control.</p>
+  <p>Most injuries begin when small mistakes happen faster than the body can correct them. The corrective buffer is reaction margin, and once it narrows, events outrun control.</p>
   <p>You feel rushed even before anything goes wrong.</p>
 
   <h2>Ignoring resistance changes removes warning</h2>
