--- a/tools-safety/mistakes-that-shorten-tool-life.html
+++ b/tools-safety/mistakes-that-shorten-tool-life.html
@@ -57,7 +57,7 @@
   <h1>Mistakes That Shorten Tool Life</h1>
 
   <h2>Wear accelerates when stress never resets</h2>
-  <p>Tools fail early when repeated stress does not have time to settle. The single limiter is stress recovery, and once it is exceeded, wear stacks instead of clearing.</p>
+  <p>Tools fail early when repeated stress does not have time to settle. The recovery ceiling is stress recovery, and once it is exceeded, wear stacks instead of clearing.</p>
   <p>You feel heat, drag, or resistance building faster each session.</p>
 
   <h2>Pushing through resistance deforms components</h2>
