--- a/tools-safety/push-vs-self-propelled-mowers-explained.html
+++ b/tools-safety/push-vs-self-propelled-mowers-explained.html
@@ -57,7 +57,7 @@
   <h1>Push vs Self-Propelled Mowers Explained</h1>
 
   <h2>The real difference is how movement is controlled</h2>
-  <p>Both mower types cut grass the same way, but they move differently across the lawn. The single limiter is controllable forward motion, and when that is exceeded, the mower stops tracking evenly.</p>
+  <p>Both mower types cut grass the same way, but they move differently across the lawn. The tracking constraint is controllable forward motion, and when that is exceeded, the mower stops tracking evenly.</p>
   <p>The lawn shows this as wavy cut lines and inconsistent striping after a single pass.</p>
 
   <h2>Push mowers reveal effort through pace changes</h2>
