--- a/tools-safety/signs-a-tool-is-beyond-repair.html
+++ b/tools-safety/signs-a-tool-is-beyond-repair.html
@@ -57,7 +57,7 @@
   <h1>Signs a Tool Is Beyond Repair</h1>
 
   <h2>Repair stops working when stability never returns</h2>
-  <p>Tools cross a point where fixes no longer restore predictable behavior. The single limiter is structural stability, and once it is lost, adjustments cannot hold.</p>
+  <p>Tools cross a point where fixes no longer restore predictable behavior. The irreversibility point is structural stability, and once it is lost, adjustments cannot hold.</p>
   <p>You fix one issue and feel a new one immediately.</p>
 
   <h2>Alignment fails to stay corrected</h2>
