--- a/tools-safety/string-trimmer-basics-explained.html
+++ b/tools-safety/string-trimmer-basics-explained.html
@@ -57,7 +57,7 @@
   <h1>String Trimmer Basics Explained</h1>
 
   <h2>String trimmers remove grass by abrasion</h2>
-  <p>A string trimmer does not slice grass cleanly. It wears it away through repeated impact. The single limiter is controlled contact time, and once that limit is exceeded, damage accelerates.</p>
+  <p>A string trimmer does not slice grass cleanly. It wears it away through repeated impact. The exposure threshold is controlled contact time, and once that limit is exceeded, damage accelerates.</p>
   <p>The edge immediately looks fuzzy and torn instead of sharp.</p>
 
   <h2>Edges take more damage than open lawn</h2>
