--- a/tools-safety/when-aeration-does-nothing.html
+++ b/tools-safety/when-aeration-does-nothing.html
@@ -57,7 +57,7 @@
   <h1>When Aeration Does Nothing</h1>
 
   <h2>Aeration only works against one kind of resistance</h2>
-  <p>Aeration opens the surface to relieve pressure. The single limiter is surface compression, and when compression is not what is holding the lawn back, openings change nothing.</p>
+  <p>Aeration opens the surface to relieve pressure. The determining factor is surface compression, and when compression is not what is holding the lawn back, openings change nothing.</p>
   <p>The ground looks punctured, but the lawn surface appears the same days later.</p>
 
   <h2>Visible holes do not mean functional change</h2>
