--- a/tools-safety/when-aeration-tools-make-sense.html
+++ b/tools-safety/when-aeration-tools-make-sense.html
@@ -57,7 +57,7 @@
   <h1>When Aeration Tools Make Sense</h1>
 
   <h2>Aeration only helps when pressure is the problem</h2>
-  <p>Aeration tools work by briefly relieving surface pressure so grass can function normally. The single limiter is surface compression, and if that is not the issue, nothing improves.</p>
+  <p>Aeration tools work by briefly relieving surface pressure so grass can function normally. The deciding constraint is surface compression, and if that is not the issue, nothing improves.</p>
   <p>The lawn feels hard underfoot before aeration and unchanged afterward.</p>
 
   <h2>Compacted surfaces show immediate resistance</h2>
