--- a/tools-safety/when-hiring-help-is-the-safer-option.html
+++ b/tools-safety/when-hiring-help-is-the-safer-option.html
@@ -57,7 +57,7 @@
   <h1>When Hiring Help Is the Safer Option</h1>
 
   <h2>Safety breaks down when demands exceed capacity</h2>
-  <p>Yard work becomes unsafe when task demands outgrow what one person can manage consistently. The single limiter is personal capacity, and once it is exceeded, control degrades before danger feels obvious.</p>
+  <p>Yard work becomes unsafe when task demands outgrow what one person can manage consistently. The breaking point is personal capacity, and once it is exceeded, control degrades before danger feels obvious.</p>
   <p>You feel stretched just keeping up with the work.</p>
 
   <h2>Tool volume multiplies exposure</h2>
