--- a/tools-safety/when-repairs-make-more-sense-than-replacement.html
+++ b/tools-safety/when-repairs-make-more-sense-than-replacement.html
@@ -57,7 +57,7 @@
   <h1>When Repairs Make More Sense Than Replacement</h1>
 
   <h2>Repairs work when the core structure is intact</h2>
-  <p>Not all performance loss means a tool is finished. The single limiter is structural integrity, and when it remains intact, targeted fixes restore function.</p>
+  <p>Not all performance loss means a tool is finished. The underlying load-bearing state is structural integrity, and when it remains intact, targeted fixes restore function.</p>
   <p>You see one clear issue instead of widespread failure.</p>
 
   <h2>Isolated wear produces consistent symptoms</h2>
