--- a/tools-safety/when-tools-are-the-real-problem.html
+++ b/tools-safety/when-tools-are-the-real-problem.html
@@ -57,7 +57,7 @@
   <h1>When Tools Are the Real Problem</h1>
 
   <h2>Progress stalls even as effort increases</h2>
-  <p>Work feels harder without producing better outcomes. The single limiter is force transfer accuracy, and once tools cannot deliver it, results plateau.</p>
+  <p>Work feels harder without producing better outcomes. The efficiency breakpoint is force transfer accuracy, and once tools cannot deliver it, results plateau.</p>
   <p>You work longer but see no visible improvement.</p>
 
   <h2>Repeated passes fail to change conditions</h2>
