--- a/tools-safety/when-yard-work-causes-more-harm-than-good.html
+++ b/tools-safety/when-yard-work-causes-more-harm-than-good.html
@@ -57,7 +57,7 @@
   <h1>When Yard Work Causes More Harm Than Good</h1>
 
   <h2>Damage begins when effort outruns control</h2>
-  <p>Yard work turns harmful when force and speed exceed what can be guided precisely. The single limiter is control margin, and once it thins, improvement reverses.</p>
+  <p>Yard work turns harmful when force and speed exceed what can be guided precisely. The safety envelope is control margin, and once it thins, improvement reverses.</p>
   <p>You feel movements getting sloppier instead of smoother.</p>
 
   <h2>Repeated passes amplify small errors</h2>
