--- a/tools-safety/when-yard-work-should-be-stopped.html
+++ b/tools-safety/when-yard-work-should-be-stopped.html
@@ -57,7 +57,7 @@
   <h1>When Yard Work Should Be Stopped</h1>
 
   <h2>Work should stop when control starts slipping</h2>
-  <p>Yard work only stays safe while movement remains deliberate. The single limiter is controllable awareness, and once it fades, mistakes compound faster than they can be corrected.</p>
+  <p>Yard work only stays safe while movement remains deliberate. The attentional threshold is controllable awareness, and once it fades, mistakes compound faster than they can be corrected.</p>
   <p>You feel movements becoming rushed instead of steady.</p>
 
   <h2>Environmental signals shift before danger looks obvious</h2>
