--- a/tools-safety/why-blowers-can-damage-lawns.html
+++ b/tools-safety/why-blowers-can-damage-lawns.html
@@ -57,7 +57,7 @@
   <h1>Why Blowers Can Damage Lawns</h1>
 
   <h2>Blowers remove more than loose debris</h2>
-  <p>High-speed air does not distinguish between leaves and surface protection. The single limiter is surface cohesion, and once airflow exceeds it, grass loses its ability to stay upright.</p>
+  <p>High-speed air does not distinguish between leaves and surface protection. The cohesion limit is surface cohesion, and once airflow exceeds it, grass loses its ability to stay upright.</p>
   <p>The lawn immediately looks pressed flat and lighter in color after use.</p>
 
   <h2>Airflow strips moisture from exposed blades</h2>
