--- a/tools-safety/why-calibration-matters-for-spreaders.html
+++ b/tools-safety/why-calibration-matters-for-spreaders.html
@@ -57,7 +57,7 @@
   <h1>Why Calibration Matters for Spreaders</h1>
 
   <h2>Calibration controls how much material leaves the machine</h2>
-  <p>Spreaders release material through an opening that determines flow rate. The single limiter is output control, and when it is wrong, every pass applies a different amount than intended.</p>
+  <p>Spreaders release material through an opening that determines flow rate. The metering constraint is output control, and when it is wrong, every pass applies a different amount than intended.</p>
   <p>The lawn later shows uneven response even though the work looked consistent.</p>
 
   <h2>Too much material overwhelms localized areas</h2>
