--- a/tools-safety/why-cheap-safety-gear-fails.html
+++ b/tools-safety/why-cheap-safety-gear-fails.html
@@ -57,7 +57,7 @@
   <h1>Why Cheap Safety Gear Fails</h1>
 
   <h2>Failure begins when fit breaks under motion</h2>
-  <p>Safety gear works only while it stays in place during movement. The single limiter is positional stability, and cheap gear loses it as soon as work starts.</p>
+  <p>Exposure to sun, moisture, and temperature swings slowly alters materials even when tools are not in use. As stability erodes, parts stop behaving in predictable ways.</p>
   <p>You feel equipment shifting or slipping almost immediately.</p>
 
   <h2>Low-grade materials deform under stress</h2>
