--- a/tools-safety/why-cheap-tools-fail-faster.html
+++ b/tools-safety/why-cheap-tools-fail-faster.html
@@ -58,7 +58,8 @@
 
   <h2>Cheap tools break the moment force stops being controlled</h2>
   <p>All yard tools exist to move force into grass, soil, or debris in a controlled way. The difference between cheap and durable tools is whether that force stays predictable over time.</p>
-  <p>The single limiter is structural integrity, and once it degrades, every task becomes harder instead of easier.</p>
+  <p>The load-bearing threshold is structural integrity, and once it degrades, every task becomes harder instead of easier.</p>
+
 
   <h2>Low-quality materials deform instead of holding shape</h2>
   <p>Thin metal bends, soft edges round off, and weak joints loosen under normal use. These changes do not stop the tool from working, they change how it contacts the lawn.</p>
