--- a/tools-safety/why-dirty-tools-fail-faster.html
+++ b/tools-safety/why-dirty-tools-fail-faster.html
@@ -57,7 +57,7 @@
   <h1>Why Dirty Tools Fail Faster</h1>
 
   <h2>Dirt turns movement into grinding</h2>
-  <p>Soil and debris stick to moving parts and get dragged through every motion. The single limiter is wear tolerance, and once it is exceeded, friction multiplies across the tool.</p>
+  <p>Soil and debris stick to moving parts and get dragged through every motion. The endurance boundary is wear tolerance, and once it is exceeded, friction multiplies across the tool.</p>
   <p>The tool begins to feel rough, heavy, or uneven during normal operation.</p>
 
   <h2>Moist debris holds damage in place</h2>
