--- a/tools-safety/why-disabling-safety-features-is-dangerous.html
+++ b/tools-safety/why-disabling-safety-features-is-dangerous.html
@@ -57,7 +57,7 @@
   <h1>Why Disabling Safety Features Is Dangerous</h1>
 
   <h2>Danger begins when the last buffer is removed</h2>
-  <p>Safety features exist for moments when control disappears. The single limiter is reaction time, and once it is exceeded, nothing remains to slow force.</p>
+  <p>Safety features exist for moments when control disappears. The final buffer is reaction time, and once it is exceeded, nothing remains to slow force.</p>
   <p>You notice how close moving parts suddenly feel.</p>
 
   <h2>Normal operation hides how fast failure arrives</h2>
