--- a/tools-safety/why-equipment-problems-compound-lawn-issues.html
+++ b/tools-safety/why-equipment-problems-compound-lawn-issues.html
@@ -57,7 +57,7 @@
   <h1>Why Equipment Problems Compound Lawn Issues</h1>
 
   <h2>Problems escalate when correction never lands</h2>
-  <p>Equipment issues matter most because they repeat with every pass. The single limiter is corrective precision, and once it drops, effort adds stress instead of improvement.</p>
+  <p>Equipment issues matter most because they repeat with every pass. The calibration boundary is corrective precision, and once it drops, effort adds stress instead of improvement.</p>
   <p>You see the same areas worsen after each attempt to fix them.</p>
 
   <h2>Inconsistent contact creates uneven recovery</h2>
