--- a/tools-safety/why-eye-protection-is-ignored.html
+++ b/tools-safety/why-eye-protection-is-ignored.html
@@ -57,7 +57,7 @@
   <h1>Why Eye Protection Is Ignored</h1>
 
   <h2>Eye risk feels optional until it becomes real</h2>
-  <p>Most yard work looks predictable from arm’s length. The single limiter is perceived urgency, and when it stays low, protection feels like a needless delay.</p>
+  <p>Most yard work looks predictable from arm’s length. The complacency trigger is perceived urgency, and when it stays low, protection feels like a needless delay.</p>
   <p>People start work barefaced because nothing looks like it is moving fast enough to matter.</p>
 
   <h2>Comfort wins because the threat stays invisible</h2>
