--- a/tools-safety/why-footwear-matters-for-yard-work.html
+++ b/tools-safety/why-footwear-matters-for-yard-work.html
@@ -57,7 +57,7 @@
   <h1>Why Footwear Matters for Yard Work</h1>
 
   <h2>Footwear sets the boundary for balance</h2>
-  <p>Every movement during yard work begins at the ground. The single limiter is traction, and when it drops below demand, the body loses the ability to correct motion.</p>
+  <p>Every movement during yard work begins at the ground. The grip threshold is traction, and when it drops below demand, the body loses the ability to correct motion.</p>
   <p>The first signal is a subtle slide or shift that happens before any conscious adjustment.</p>
 
   <h2>Slippage breaks timing immediately</h2>
