--- a/tools-safety/why-gloves-prevent-long-term-damage.html
+++ b/tools-safety/why-gloves-prevent-long-term-damage.html
@@ -57,7 +57,7 @@
   <h1>Why Gloves Prevent Long-Term Damage</h1>
 
   <h2>Hand damage begins before pain appears</h2>
-  <p>Most long-term hand injuries do not start with sharp pain. The single limiter is tissue tolerance, and once repeated stress exceeds it, damage accumulates quietly.</p>
+  <p>Most long-term hand injuries do not start with sharp pain. The load-bearing capacity is tissue tolerance, and once repeated stress exceeds it, damage accumulates quietly.</p>
   <p>The first sign is numbness or stiffness that lingers after work ends.</p>
 
   <h2>Vibration travels directly into bare tissue</h2>
