--- a/tools-safety/why-heat-increases-accident-risk.html
+++ b/tools-safety/why-heat-increases-accident-risk.html
@@ -57,7 +57,7 @@
   <h1>Why Heat Increases Accident Risk</h1>
 
   <h2>Heat degrades control before pain demands attention</h2>
-  <p>High temperature taxes the body long before it feels unbearable. The single limiter is thermal recovery, and once it is exceeded, coordination erodes quietly.</p>
+  <p>High temperature taxes the body long before it feels unbearable. The heat dissipation limit is thermal recovery, and once it is exceeded, coordination erodes quietly.</p>
   <p>You feel sluggish movements without feeling injured.</p>
 
   <h2>Sweat interferes with grip and footing</h2>
