--- a/tools-safety/why-improper-aeration-hurts-soil.html
+++ b/tools-safety/why-improper-aeration-hurts-soil.html
@@ -57,7 +57,7 @@
   <h1>Why Improper Aeration Hurts Soil</h1>
 
   <h2>Aeration disrupts soil before it helps it</h2>
-  <p>Aeration breaks the surface open with the assumption that structure will rebound afterward. The single limiter is soil stability, and when disturbance exceeds that limit, structure collapses instead of recovering.</p>
+  <p>Aeration breaks the surface open with the assumption that structure will rebound afterward. The failure threshold is soil stability, and when disturbance exceeds that limit, structure collapses instead of recovering.</p>
   <p>The surface immediately feels loose and uneven underfoot.</p>
 
   <h2>Openings collapse when timing is wrong</h2>
