--- a/tools-safety/why-improper-lifting-causes-back-injuries.html
+++ b/tools-safety/why-improper-lifting-causes-back-injuries.html
@@ -57,7 +57,7 @@
   <h1>Why Improper Lifting Causes Back Injuries</h1>
 
   <h2>Back injuries start when alignment breaks under load</h2>
-  <p>Lifting problems begin before weight feels heavy. The single limiter is spinal alignment, and once force shifts off that line, tissue absorbs stress unevenly.</p>
+  <p>Lifting problems begin before weight feels heavy. The alignment breakpoint is spinal alignment, and once force shifts off that line, tissue absorbs stress unevenly.</p>
   <p>You feel a tight pull instead of a clean rise.</p>
 
   <h2>Twisting turns weight into leverage</h2>
