--- a/tools-safety/why-improper-tool-choice-wastes-time.html
+++ b/tools-safety/why-improper-tool-choice-wastes-time.html
@@ -57,7 +57,7 @@
   <h1>Why Improper Tool Choice Wastes Time</h1>
 
   <h2>Time is lost when the tool does not match the work</h2>
-  <p>Jobs slow down when the tool’s design fights the task instead of serving it. The single limiter is task-tool fit, and once it is wrong, extra effort replaces progress.</p>
+  <p>Jobs slow down when the tool’s design fights the task instead of serving it. When the tool no longer matches the work, added effort replaces real progress.</p>
   <p>You feel busy without seeing the area change.</p>
 
   <h2>Effort rises while output stays flat</h2>
