--- a/tools-safety/why-leaving-debris-smothers-lawns.html
+++ b/tools-safety/why-leaving-debris-smothers-lawns.html
@@ -57,7 +57,7 @@
   <h1>Why Leaving Debris Smothers Lawns</h1>
 
   <h2>Debris blocks surface interaction</h2>
-  <p>When debris sits on grass, it forms a barrier between the blades and their environment. The single limiter is surface exchange, and once it is restricted, grass cannot maintain normal function.</p>
+  <p>When debris sits on grass, it forms a barrier between the blades and their environment. Once that exchange is restricted, grass can no longer maintain normal function.</p>
   <p>The lawn immediately appears muted and uneven compared to uncovered areas.</p>
 
   <h2>Weight pins grass into the soil</h2>
