--- a/tools-safety/why-most-yard-injuries-are-avoidable.html
+++ b/tools-safety/why-most-yard-injuries-are-avoidable.html
@@ -57,7 +57,7 @@
   <h1>Why Most Yard Injuries Are Avoidable</h1>
 
   <h2>Injuries follow the same pattern every time</h2>
-  <p>Most yard injuries happen after control has already been reduced. The single limiter is control margin, and once it shrinks, the next surprise becomes an injury event.</p>
+  <p>Most yard injuries happen after control has already been reduced. As that margin narrows, the next unexpected movement turns into an injury event.</p>
   <p>You feel slightly out of rhythm before anything goes wrong.</p>
 
   <h2>Familiar work hides rising risk</h2>
