--- a/tools-safety/why-mower-height-is-often-wrong.html
+++ b/tools-safety/why-mower-height-is-often-wrong.html
@@ -57,7 +57,8 @@
   <h1>Why Mower Height Is Often Wrong</h1>
 
   <h2>Mower height fails when too much surface is removed at once</h2>
-  <p>Grass can handle small reductions without showing stress, but mower height is often set low enough to strip away more surface than the plant can tolerate. The single limiter is remaining leaf surface, and once too much is removed, the lawn immediately looks thin and washed out.</p>
+  <p>Grass can absorb minor reductions without visible stress, but mower height is often set low enough to remove more surface than the plant can tolerate. Once too much leaf area is taken away, the lawn immediately looks thin and washed out.</p>
+
   <p>The cut area loses its rich color within hours.</p>
 
   <h2>Low cuts expose uneven ground instantly</h2>
