--- a/tools-safety/why-mowers-cause-most-yard-injuries.html
+++ b/tools-safety/why-mowers-cause-most-yard-injuries.html
@@ -57,7 +57,7 @@
   <h1>Why Mowers Cause Most Yard Injuries</h1>
 
   <h2>Mowers compress multiple hazards into one machine</h2>
-  <p>Mowers combine cutting force, rolling weight, and forward motion at the same time. The single limiter is reaction margin, and when it collapses, injury follows immediately.</p>
+  <p>Mowers combine cutting force, rolling weight, and forward motion at the same time. When reaction time disappears, there is no chance to correct before injury occurs.</p>
   <p>The machine feels fine until one movement happens faster than the body can adjust.</p>
 
   <h2>Momentum keeps the mower moving after control slips</h2>
