--- a/tools-safety/why-night-yard-work-is-risky.html
+++ b/tools-safety/why-night-yard-work-is-risky.html
@@ -57,7 +57,7 @@
   <h1>Why Night Yard Work Is Risky</h1>
 
   <h2>Risk begins when visual confirmation disappears</h2>
-  <p>Night removes the ability to verify position and distance in real time. The single limiter is visual feedback, and once it drops, movement continues without reliable correction.</p>
+  <p>Night removes the ability to verify position and distance in real time. As visual feedback drops, movement continues without reliable correction.</p>
   <p>You feel unsure where tool edges and obstacles actually are.</p>
 
   <h2>Artificial light flattens depth perception</h2>
