--- a/tools-safety/why-off-season-care-matters.html
+++ b/tools-safety/why-off-season-care-matters.html
@@ -57,7 +57,7 @@
   <h1>Why Off-Season Care Matters</h1>
 
   <h2>Damage accumulates while nothing appears to be happening</h2>
-  <p>During the off-season, tools and lawns sit without correction or feedback. The single limiter is idle degradation, and once it advances, normal function cannot resume cleanly.</p>
+  <p>During the off-season, tools and lawns sit without correction or feedback. As degradation progresses during inactivity, normal function does not resume cleanly.</p>
   <p>The first sign is resistance or irregular response the moment activity starts again.</p>
 
   <h2>Stored stress resurfaces immediately under load</h2>
