--- a/tools-safety/why-over-edging-harms-lawns.html
+++ b/tools-safety/why-over-edging-harms-lawns.html
@@ -57,7 +57,7 @@
   <h1>Why Over-Edging Harms Lawns</h1>
 
   <h2>Edging compresses damage into a single line</h2>
-  <p>Edging applies force to the same boundary every time work is done. The single limiter is boundary regeneration, and once it is exceeded, grass along that line stops returning.</p>
+  <p>Edging applies force to the same boundary every time work is done. Once that boundary is stressed beyond its ability to regenerate, grass along the line stops returning.</p>
   <p>The edge immediately appears thinner and recessed compared to the rest of the lawn.</p>
 
   <h2>Each pass removes living surface</h2>
