--- a/tools-safety/why-pets-are-at-risk-during-yard-work.html
+++ b/tools-safety/why-pets-are-at-risk-during-yard-work.html
@@ -57,7 +57,7 @@
   <h1>Why Pets Are at Risk During Yard Work</h1>
 
   <h2>Risk rises when space stops signaling danger</h2>
-  <p>Yard work creates moving hazards that depend on visible separation. The single limiter is boundary awareness, and when it weakens, pets wander into active zones without hesitation.</p>
+  <p>Yard work creates moving hazards that rely on clear, visible separation. When that awareness weakens, pets wander into active zones without hesitation.</p>
   <p>You see a dog drift closer because the yard looks unchanged.</p>
 
   <h2>Noise scrambles instinctive distance</h2>
