--- a/tools-safety/why-proper-training-matters-for-homeowners.html
+++ b/tools-safety/why-proper-training-matters-for-homeowners.html
@@ -57,7 +57,7 @@
   <h1>Why Proper Training Matters for Homeowners</h1>
 
   <h2>Training fills the gap between appearance and behavior</h2>
-  <p>Most tools look predictable until motion begins. The single limiter is behavioral familiarity, and without it, force and timing feel different than expected.</p>
+  <p>Most tools appear predictable until they are in motion. Without familiar behavior to guide expectations, force and timing feel different than anticipated.</p>
   <p>You feel surprised by how quickly the tool reacts once engaged.</p>
 
   <h2>Untrained hands misread resistance</h2>
