--- a/tools-safety/why-replacing-tools-fixes-lawn-issues.html
+++ b/tools-safety/why-replacing-tools-fixes-lawn-issues.html
@@ -57,7 +57,7 @@
   <h1>Why Replacing Tools Fixes Lawn Issues</h1>
 
   <h2>Improvement begins when contact becomes consistent again</h2>
-  <p>Many lawn problems persist because tools no longer interact cleanly with grass or soil. The single limiter is mechanical consistency, and once it degrades, effort stops translating into recovery.</p>
+  <p>Many lawn problems persist because tools no longer interact cleanly with grass or soil. Once mechanical consistency degrades, added effort no longer translates into recovery.</p>
   <p>You notice uneven results no matter how carefully you work.</p>
 
   <h2>Worn components distort force application</h2>
