--- a/tools-safety/why-rushing-causes-tool-injuries.html
+++ b/tools-safety/why-rushing-causes-tool-injuries.html
@@ -57,7 +57,7 @@
   <h1>Why Rushing Causes Tool Injuries</h1>
 
   <h2>Rushing removes the buffer that keeps mistakes small</h2>
-  <p>Speed compresses decisions until there is no room to adjust. The single limiter is time compression, and once it tightens, normal correction disappears.</p>
+  <p>Speed compresses decisions until there is no room to adjust. As time tightens, normal correction disappears.</p>
   <p>You feel movements getting jerky instead of smooth.</p>
 
   <h2>Fast motion outruns visual processing</h2>
