--- a/tools-safety/why-rust-ruins-equipment.html
+++ b/tools-safety/why-rust-ruins-equipment.html
@@ -57,7 +57,7 @@
   <h1>Why Rust Ruins Equipment</h1>
 
   <h2>Rust removes material instead of coating it</h2>
-  <p>Rust forms by consuming metal at the surface. The single limiter is surface integrity, and once it is breached, parts no longer fit or move as designed.</p>
+  <p>Rust eats away at metal from the surface inward. Once that surface integrity is compromised, parts no longer fit or move as they were designed to.</p>
   <p>The first visible sign is flaking or rough texture where metal was once smooth.</p>
 
   <h2>Rough surfaces turn motion into resistance</h2>
