--- a/tools-safety/why-safety-features-get-ignored.html
+++ b/tools-safety/why-safety-features-get-ignored.html
@@ -57,7 +57,7 @@
   <h1>Why Safety Features Get Ignored</h1>
 
   <h2>Safety fades when nothing reacts immediately</h2>
-  <p>Most protective elements only matter when something goes wrong. The single limiter is feedback latency, and when it stays quiet, urgency never forms.</p>
+  <p>Most protective elements only matter when something goes wrong. When feedback arrives too late or not at all, urgency never forms.</p>
   <p>You see guards and switches sitting unused without consequence.</p>
 
   <h2>Interruptions feel larger than invisible risk</h2>
