--- a/tools-safety/why-safety-planning-is-ignored.html
+++ b/tools-safety/why-safety-planning-is-ignored.html
@@ -57,7 +57,7 @@
   <h1>Why Safety Planning Is Ignored</h1>
 
   <h2>Planning disappears when tasks feel routine</h2>
-  <p>Yard work repeats often enough that preparation feels unnecessary. The single limiter is perceived risk, and once it drops, planning stops entirely.</p>
+  <p>Yard work repeats often enough that preparation feels unnecessary. As perceived risk drops, planning stops entirely.</p>
   <p>You start work without checking surroundings or equipment.</p>
 
   <h2>Familiar tools reduce urgency</h2>
