--- a/tools-safety/why-slopes-increase-tool-danger.html
+++ b/tools-safety/why-slopes-increase-tool-danger.html
@@ -57,7 +57,7 @@
   <h1>Why Slopes Increase Tool Danger</h1>
 
   <h2>Slopes quietly steal balance first</h2>
-  <p>Inclines change how weight loads the body before anything looks wrong. The single limiter is balance margin, and once it narrows, recovery becomes delayed.</p>
+  <p>Inclines change how weight loads the body before anything looks wrong. As balance margin narrows, recovery becomes delayed.</p>
   <p>You feel your stance working harder just to stay planted.</p>
 
   <h2>Footing becomes reactive instead of stable</h2>
