--- a/tools-safety/why-tool-weight-matters.html
+++ b/tools-safety/why-tool-weight-matters.html
@@ -57,7 +57,7 @@
   <h1>Why Tool Weight Matters</h1>
 
   <h2>Weight controls how force settles into the surface</h2>
-  <p>Every tool transfers its mass into grass and soil the moment it makes contact. The single limiter is surface load tolerance, and when that limit is exceeded, the lawn shows compressed tracks and flattened blades that stay pressed down after work ends.</p>
+  <p>Every tool transfers its mass into grass and soil the moment it makes contact. When surface load exceeds what the lawn can tolerate, compressed tracks and flattened blades remain visible long after work ends.</p>
   <p>The surface looks imprinted rather than trimmed.</p>
 
   <h2>Heavier tools reduce margin for balance errors</h2>
