--- a/tools-safety/why-trimmers-damage-grass-edges.html
+++ b/tools-safety/why-trimmers-damage-grass-edges.html
@@ -57,7 +57,7 @@
   <h1>Why Trimmers Damage Grass Edges</h1>
 
   <h2>Edge zones absorb repeated contact</h2>
-  <p>Grass edges take the full force of a trimmer in the same narrow strip every time. The single limiter is tissue tolerance, and once that limit is crossed, recovery stops.</p>
+  <p>Grass edges absorb the full force of a trimmer along the same narrow strip every time. Once tissue tolerance is exceeded, the edge no longer recovers.</p>
   <p>The edge immediately looks thinner and lighter than the surrounding lawn.</p>
 
   <h2>High-speed contact tears instead of trims</h2>
