--- a/tools-safety/why-uneven-spreading-causes-problems.html
+++ b/tools-safety/why-uneven-spreading-causes-problems.html
@@ -57,7 +57,7 @@
   <h1>Why Uneven Spreading Causes Problems</h1>
 
   <h2>Uneven spreading divides the lawn into zones</h2>
-  <p>When material lands inconsistently, the lawn stops behaving as a single surface. The single limiter is distribution consistency, and once it is broken, areas begin responding at different speeds.</p>
+  <p>When material lands inconsistently, the lawn stops behaving as a single surface. Once distribution breaks down, different areas begin responding at different speeds.</p>
   <p>This shows up as visible streaks where grass grows darker or lighter than surrounding turf.</p>
 
   <h2>Overloaded areas react first and fade later</h2>
