--- a/tools-safety/why-yard-work-causes-long-term-pain.html
+++ b/tools-safety/why-yard-work-causes-long-term-pain.html
@@ -57,7 +57,7 @@
   <h1>Why Yard Work Causes Long-Term Pain</h1>
 
   <h2>Pain begins long before injury feels obvious</h2>
-  <p>Yard work applies small forces again and again without drawing attention. The single limiter is tissue recovery time, and once it falls behind, damage accumulates silently.</p>
+  <p>Yard work applies small forces repeatedly without drawing attention. When recovery time can’t keep up with that repetition, damage builds quietly instead of healing.</p>
   <p>You feel mild soreness that no longer disappears by the next day.</p>
 
   <h2>Repetition trains the body into stress patterns</h2>
