--- a/tools-safety/why-yard-work-is-more-dangerous-than-it-looks.html
+++ b/tools-safety/why-yard-work-is-more-dangerous-than-it-looks.html
@@ -57,7 +57,7 @@
   <h1>Why Yard Work Is More Dangerous Than It Looks</h1>
 
   <h2>Familiar tasks erase caution</h2>
-  <p>Yard work feels routine, which dulls awareness before hazards appear. The single limiter is situational awareness, and once it fades, risk builds quietly.</p>
+  <p>Yard work feels routine, which dulls awareness before hazards appear. As situational awareness fades, risk accumulates quietly without drawing attention.</p>
   <p>You move automatically without checking surroundings.</p>
 
   <h2>Small tools create false confidence</h2>
