--- a/watering-irrigation/best-time-of-day-to-water-a-lawn.html
+++ b/watering-irrigation/best-time-of-day-to-water-a-lawn.html
@@ -57,7 +57,7 @@
   <h1>Best Time of Day to Water a Lawn</h1>
 
   <h2>Timing is about how long water stays trapped</h2>
-  <p>The best watering time is when moisture can enter the soil and leave the surface quickly. The single limiter is dry-back window, and once it is missed, water lingers and stress begins.</p>
+  <p>The best watering time is when moisture can soak into the soil and the surface can dry soon after. If that dry-back window is missed, water lingers and stress begins to build.</p>
   <p>You can still see shine on the grass long after watering stops.</p>
 
   <h2>Early day watering preserves soak time</h2>
