--- a/watering-irrigation/how-much-water-grass-actually-needs.html
+++ b/watering-irrigation/how-much-water-grass-actually-needs.html
@@ -57,7 +57,7 @@
   <h1>How Much Water Grass Actually Needs</h1>
 
   <h2>Water problems start with excess, not shortage</h2>
-  <p>Most lawns receive more water than grass can use. The single limiter is soil release rate, and once incoming water exceeds it, stress begins immediately.</p>
+  <p>Most lawns receive more water than grass can actually use. When water enters the soil faster than it can drain or release it, stress begins almost immediately.</p>
   <p>You see puddles or shine on the surface after watering.</p>
 
   <h2>Grass uses water slower than sprinklers apply it</h2>
