--- a/watering-irrigation/how-often-lawns-should-be-watered.html
+++ b/watering-irrigation/how-often-lawns-should-be-watered.html
@@ -57,7 +57,7 @@
   <h1>How Often Lawns Should Be Watered</h1>
 
   <h2>Frequency matters more than volume</h2>
-  <p>Most watering damage comes from how often water is applied, not how much. The single limiter is soil recovery time, and once watering interrupts it, stress builds immediately.</p>
+  <p>Most watering damage comes from how often water is applied rather than how much. When the soil is rewatered before it can recover, stress begins to build immediately.</p>
   <p>The ground still feels damp when the system runs again.</p>
 
   <h2>Grass roots depend on dry intervals</h2>
